--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,4 +1,21 @@
 backend:
+  name: github
+  repo: nottrobin/nottrobin-netlify
+  branch: master
+  site_domain: quirky-perlman-7179a8.netlify.com
+
+media_folder: "images/uploads"
+
+collections:
+  - name: "post" # Used in routes, e.g. /admin/collections/blog
+    label: "Post" # Used in the UI
+    folder: "_posts" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template i.e. YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Body", name: "body", widget: "markdown"}
   name: git-gateway
   branch: master # Branch to update (optional; defaults to master)
 publish_mode: editorial_workflow
